--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build": "brunch build --production"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.5",
-    "font-awesome": "^4.7.0"
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "bootstrap": "^4.0.0-alpha.5"
   },
   "devDependencies": {
     "brunch": "^2.0.0",
